Fix conflict between nav path and dropdown menu related with z-index

--- a/app/assets/stylesheets/admin/navbar.scss
+++ b/app/assets/stylesheets/admin/navbar.scss
@@ -16,6 +16,7 @@
 @media (min-width: 992px) {
   .nav-path {
     @include bd-navbar;
+    z-index: 1019;
     top: 56px;
   }
 }
